# Hades

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
docs/: README.md  ai-assistant.md  calendar.md  cloud-sync.md  flashcards.md  focus-timer.md  getting-started.md  inspiration.md  notes.md  settings-and-themes.md  statistics.md  tasks.md  troubleshooting.md  whats-new-0.5.2.md  whats-new-0.6.0.md  whats-new-0.7.0.md  whats-new-0.7.1.md
scripts/: build-appimage.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CommandPalette.tsx  Onboarding.tsx  ReminderHost.tsx  SyncOverlay.tsx
src/components/calendar/: CalendarModule.tsx  EventModal.tsx  IcalModal.tsx
src/components/flashcards/: FlashcardsModule.tsx
src/components/layout/: Shell.tsx
src/components/notepad/: Calculator.tsx  DeletionUndoToast.tsx  Editor.tsx  FileTree.tsx  LibraryPanel.tsx  (+5 more)
src/hooks/: useIcalSync.ts  useQuitGuard.ts  useStartupSync.ts  useSyncTimer.ts  useUpdateCheck.ts
src/lib/: ai.ts  aiContext.ts  aiOneShot.ts  aiTools.ts  changelog.ts  citations.ts  editorBridge.ts  flashcardGen.ts  ical.ts  markdownDecorations.ts  markdownRender.ts  mathDecorations.ts  noteAssist.ts  noteExport.ts  noteImport.ts  noteSync.ts  pdfLibrary.ts  ragIndex.ts  sound.ts  themes.ts  updater.ts  weeklyReview.ts
src/store/: useStore.ts
src/styles/: globals.css
(+8 files in other folders)
