[package]
name = "hades"
version = "0.4.0"
description = "Hades — Linux Productivity Suite"
authors = []
edition = "2021"

[lib]
name = "hades_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"], default-features = false }
tokio = { version = "1", features = ["full"] }
